# sopa-de-letrinhas

./: pyproject.toml
accounts/: urls.py
accounts/views/: __init__.py  login.py  registration.py
app/: asgi.py  settings.py  urls.py  wsgi.py
core/models/: base_model.py
core/template/: base.html
core/templates/components/: base_form.html  base_object_delete.html  base_object_details.html  navbar_authenticated.html  navbar_not_authenticated.html  table_with_pagination.html
core/templatetags/: base_object_details_inclusion.py  get_attribute.py  object_delete_inclusion.py  table_with_pagination_inclusion.py
game/: admin.py  urls.py
game/forms/: joint_form.py  word_form.py
game/migrations/: 0002_alter_palavra_deleted_at.py  0003_word_delete_palavra.py  0004_word_updated_by.py  0005_joint.py
game/models/: exercise.py  joint.py  palavra.py  word.py
game/templates/: word_registration.html
game/templates/joints/: joint_registration.html  joint_update.html
game/templates/words/: word_delete.html  word_details.html  word_list.html  word_registration.html  word_update.html
game/views/: __init__.py
game/views/joint/: joint_create_view.py  joint_delete_view.py  joint_details_view.py  joint_list_view.py  joint_update_view.py
game/views/words/: word_create_view.py  word_delete_view.py  (+3 more)
home/: urls.py
src/accounts/: apps.py  urls.py
src/game/: admin.py  apps.py  urls.py
src/home/: urls.py
src/organization/: admin.py  apps.py  urls.py
user/: urls.py
user/forms/: login_form.py
user/templates/: login.html
user/views/: __init__.py  login.py
(+87 files in other folders)
